--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="navbar">
         <img src="logo1.png" class="logo">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#">He</a></li>
             <li><a href="#">Breakfast</a></li>
             <li><a href="#">Dinner</a></li>
             <li><a href="#">Lunch</a></li>
