--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="content">
         <h1>PREPARE YOUR MEALS</h1>
-        <p>Subscribe Menu Youtube Channel to watch more videos,<br>Press the bell icon to get latest updates.</p>
+        <p>Subscribe Menu You Channel to watch more videos,<br>Press the bell icon to get latest updates.</p>
         <div>
             <button type="button"><span></span>WATCH MORE</button>
             <button type="button"><span></span>SUBSCRIBE</button>
