--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <img src="logo1.png" class="logo">
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Breakfast</a></li>
+            <li><a href="#">fast</a></li>
             <li><a href="#">Dinner</a></li>
             <li><a href="#">Lunch</a></li>
         </ul>
