--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </ul>
     </div>
     <div class="content">
-        <h1>PREPARE YOUR MEALS</h1>
+        <h1>PREpre YOUR MEALS</h1>
         <p>Subscribe Menu Youtube Channel to watch more videos,<br>Press the bell icon to get latest updates.</p>
         <div>
             <button type="button"><span></span>WATCH MORE</button>
